Python API: Modal Operator passing through all events swallows certain key strokes #38381

Closed
opened 2014-01-28 11:17:37 +01:00 by Hans-Christian Ebke · 8 comments

System Information
Debian GNU/Linux 7.0 (wheezy)
Linux 3.2.0-4-amd64 #1 SMP Debian 3.2.41-2+deb7u2 x86_64 GNU/Linux
GeForce GTX 275

Blender Version
Broken: 2.69.0 r60991

Short description of error
In Python I implemented a minimal modal operator that simply always returns PASS_THROUGH in its modal function. As soon as this operator is running, under certain, reproducible conditions key strokes are "swallowed", i.e. ignored by blender.

Exact steps for others to reproduce the error
Copy and paste the following script in the blender text editor. Then click "Run Script".

import bpy

class SwallowKeysOperator(bpy.types.Operator):
    bl_idname = "keys.swallow"
    bl_label = "Swallow Keys Operator"

    def modal(self, context, event):
        return {'PASS_THROUGH'}

    def execute(self, context):
        context.window_manager.modal_handler_add(self)
        return {'RUNNING_MODAL'}

if __name__ == "__main__":
    bpy.utils.register_class(SwallowKeysOperator)
    bpy.ops.keys.swallow()

This automatically registers and runs the operator.
Now, also in the text editor (or any other area), with a frequency of at least (roughly) 4 keys per second hit the same key twice. Then, after an arbitrarily long pause hit any other key. This last key stroke will be ignored by blender. (Imagine, e.g., typing "Hello" which will come out as "Hell".)

**System Information** Debian GNU/Linux 7.0 (wheezy) Linux 3.2.0-4-amd64 #1 SMP Debian 3.2.41-2+deb7u2 x86_64 GNU/Linux GeForce GTX 275 **Blender Version** Broken: 2.69.0 r60991 **Short description of error** In Python I implemented a minimal modal operator that simply always returns PASS_THROUGH in its modal function. As soon as this operator is running, under certain, reproducible conditions key strokes are "swallowed", i.e. ignored by blender. **Exact steps for others to reproduce the error** Copy and paste the following script in the blender text editor. Then click "Run Script". ``` import bpy class SwallowKeysOperator(bpy.types.Operator): bl_idname = "keys.swallow" bl_label = "Swallow Keys Operator" def modal(self, context, event): return {'PASS_THROUGH'} def execute(self, context): context.window_manager.modal_handler_add(self) return {'RUNNING_MODAL'} if __name__ == "__main__": bpy.utils.register_class(SwallowKeysOperator) bpy.ops.keys.swallow() ``` This automatically registers and runs the operator. Now, also in the text editor (or any other area), with a frequency of at least (roughly) 4 keys per second hit the same key twice. Then, after an arbitrarily long pause hit any other key. This last key stroke will be ignored by blender. (Imagine, e.g., typing "Hello" which will come out as "Hell".)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @hcebke

Added subscriber: @hcebke

I just confirmed this behavior with today's nightly build:
blender-2.69-8bf9bf3-linux-glibc211-x86_64

I just confirmed this behavior with today's nightly build: blender-2.69-8bf9bf3-linux-glibc211-x86_64

And just to be thorough, I also confirmed this behavior with the latest available nightly build for win 64 on Windows 7:
blender-2.69-fd0b104-win64

And just to be thorough, I also confirmed this behavior with the latest available nightly build for win 64 on Windows 7: blender-2.69-fd0b104-win64
Brecht Van Lommel self-assigned this 2014-01-28 15:50:03 +01:00

This issue was referenced by blender/blender-addons-contrib@deab0d1040

This issue was referenced by blender/blender-addons-contrib@deab0d10402b59652ec5e19836856eb238af863e

This issue was referenced by deab0d1040

This issue was referenced by deab0d10402b59652ec5e19836856eb238af863e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit deab0d1040.

Closed by commit deab0d1040.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38381
No description provided.